--- a/assets/css/pong.css
+++ b/assets/css/pong.css
@@ -101,7 +101,7 @@ section#pong-intro p {
   list-style: none;
 }
 #sidebar li span {
-  color: #f79737;
+  color: #1b7ad6;
 }
 #sidebar .settings {
   line-height: 2em;
