--- a/assets/less/fonts.less
+++ b/assets/less/fonts.less
@@ -1,3 +1,6 @@
+@import "values.less"; // Modify this for custom colors, font-sizes, etc
+@import "mix.less"; // Modify this for custom colors, font-sizes, etc
+
 /* Typekit delayed loading of Ansyc Fonts */
 
 .wf-loading h1, .wf-loading h2, .wf-loading h3, .wf-loading p, .wf-loading a { visibility: hidden; }
