--- a/assets/less/pong.less
+++ b/assets/less/pong.less
@@ -65,7 +65,7 @@ text-align: right;
 	list-style: none;
 }
 #sidebar li span {
-	color: @baldwinOrange;
+	color: @accentColor;
 }
 #sidebar .settings { 
 	line-height: 2em; 
