--- a/assets/less/queries.less
+++ b/assets/less/queries.less
@@ -680,6 +680,11 @@ only screen and (-webkit-min-device-pixel-ratio : 1.5),
 only screen and (min-device-pixel-ratio : 1.5) {
 /* Styles */
 
+#page {
+    background: @bodyBackground url(@bg2x) repeat;
+    background-size: 50px 50px;
+}
+
 header a.brand {
 	background-image: url("../img/logo@2x.png");
 	background-size: 200px 57px;
