--- a/assets/less/queries.less
+++ b/assets/less/queries.less
@@ -680,9 +680,9 @@ only screen and (-webkit-min-device-pixel-ratio : 1.5),
 only screen and (min-device-pixel-ratio : 1.5) {
 /* Styles */
 
-#page {
-    background: @bodyBackground url(@bg2x) repeat;
-    background-size: 50px 50px;
+#page, header {
+    background: @bodyBackground url(@bgCanvas1x) repeat;
+    background-size: 256px 256px;
 }
 
 header a.brand {
