--- a/assets/less/values.less
+++ b/assets/less/values.less
@@ -17,6 +17,7 @@
 @grayLight:             #999;
 @grayLighter:           #eee;
 @grayCool:				#c7cbcc;
+@grayCooler:			e5e5e5;
 @white:                 #fff;
 
 
@@ -175,6 +176,8 @@
 // -------------------------
 @bg1x:			"../img/bg-noise@1x.png";
 @bg2x:			"../img/bg-noise@2x.png";
+@bgCanvas1x:	"../img/bg-texture@1x.jpg";
+@bgCanvas2x:	"../img/bg-texture@2x.jpg";
 
 // Input placeholder text color
 // -------------------------
@@ -208,7 +211,7 @@
 @navbarBorder:                    darken(@navbarBackground, 12%);
 
 @navbarText:                      @grayLight;
-@navbarLinkColor:                 @white;
+@navbarLinkColor:                 @black;
 @navbarLinkColorHover:            @primaryColor;
 @navbarLinkColorActive:           @gray;
 @navbarLinkBackgroundHover:       transparent;
