--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,6 @@ body::after {
   height: 100%;
   min-height: 100%;
   background-color: #ffffff;
-  background: url("../img/bg-texture@1x.jpg") repeat;
 }
 header {
   min-height: 100px;
@@ -154,7 +153,6 @@ header {
   padding-left: 20px;
   margin: 0 auto;
   z-index: inherit;
-  background: url("../img/bg-texture@1x.jpg") repeat;
 }
 .wrapper {
   min-height: 100%;
@@ -211,12 +209,11 @@ header a.brand {
   font-weight: 700;
   text-transform: uppercase;
   text-align: left;
-  color: #000000;
-  text-shadow: 0 1px #333333;
+  color: #9a9795;
 }
 header a.brand:hover,
 header a.brand:focus {
-  color: #ffffff;
+  color: #74716f;
   text-shadow: 0 1px transparent;
 }
 header a.brand:before {
@@ -261,17 +258,16 @@ nav ul li {
 }
 nav a {
   margin: 0px 20px 0px 20px;
-  color: #000000;
+  color: #9a9795;
   font-size: 15px;
   font-weight: 600;
   font-style: normal;
   text-decoration: none;
-  text-shadow: 0 1px #333333;
   letter-spacing: .1em;
 }
 nav a:focus,
 nav a:hover {
-  color: #ffffff;
+  color: #1b7ad6;
   text-shadow: 0 1px transparent;
   text-decoration: none;
 }
@@ -627,29 +623,42 @@ img.so-skype {
   margin-top: 0;
   text-align: center;
   line-height: 15px;
-  background: e5e5e5 url("../img/bg-noise@1x.png") repeat;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
+  background: transparent;
 }
 .hero-unit img {
   max-width: 100%;
   width: 615px;
   height: auto;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+section#content::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #ffffff url("../img/bg-wood@1x.jpg") repeat-x;
+  -webkit-box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.2), inset 0 -3px 7px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.2), inset 0 -3px 7px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.2), inset 0 -3px 7px rgba(0, 0, 0, 0.2);
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 section#content {
   text-align: center;
   color: #1b7ad6;
   width: 100%;
-  position: relative;
   padding-top: 10px;
-  padding-bottom: 20px;
-  background: #000000;
-  border-top: 1px solid #333333;
-  border-bottom: 1px solid #333333;
+  padding-bottom: 0px;
+  background: transparent;
+  position: relative;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
