--- a/assets/less/pages.less
+++ b/assets/less/pages.less
@@ -39,7 +39,7 @@ body::after {
 	height: 100%;
     min-height: 100%;
     background-color: @bodyBackground;
-    background: url(@bgCanvas1x) repeat;
+    //background: url(@bgCanvas1x) repeat;
 }
 
 header {
@@ -50,7 +50,7 @@ header {
 	//border-top: 1px solid @grayDark;
 	margin: 0 auto;
 	z-index: inherit;
-	background: url(@bgCanvas1x) repeat;
+	//background: url(@bgCanvas1x) repeat;
 }
 
 .wrapper {
@@ -117,9 +117,9 @@ header a.brand {
 	text-transform: uppercase;
 	text-align: left;
 	color: @navbarBrandColor;
-	text-shadow: 0 1px @grayDark;
+	//text-shadow: 0 1px @grayDark;
 	&:hover, &:focus {
-		color: @white;
+		color: @navbarBrandColorHover;
 		text-shadow: 0 1px transparent;
 	}
 }
@@ -179,13 +179,13 @@ nav a {
 	font-weight: 600;
 	font-style: normal;
 	text-decoration: none;
-	text-shadow: 0 1px @grayDark;
+	//text-shadow: 0 1px @grayDark;
 	letter-spacing: .1em;
 }
 
 nav a:focus,
 nav a:hover {
-  color: @white;
+  color: @navbarLinkColorHover;
   text-shadow: 0 1px transparent;
   text-decoration: none;
 }
@@ -193,7 +193,7 @@ nav a:hover {
 nav .active a,
 nav .active a:hover,
 nav .active a:focus {
-  color: @accentColor;
+  color: @navbarLinkColorActive;
   text-decoration: none;
 }
 
@@ -540,28 +540,43 @@ img.so-skype {
 	text-align: center;
 	line-height:15px;
 	//border: 4px solid @black;
-	//background:@white;
-	background: @grayCooler url(@bg1x) repeat;
-	.border-radius(5px);
-	.box-shadow(0px 1px 2px 0px rgba(0,0,0,.2));
+	background:transparent;
+	//background: @grayCooler url(@bg1x) repeat;
+	//.border-radius(5px);
+	//.box-shadow(0px 1px 2px 0px rgba(0,0,0,.2));
 }
 
 .hero-unit img {
 	max-width: 100%;
 	width: 615px;
 	height: auto;
+	.backface-visibility(hidden);
 }
 
+section#content::before {
+	content: "";
+	display: block;
+	position: absolute;
+	top:0;
+	left:0;
+	right: 0;
+	bottom: 0;
+	background: @white url(@bgWood1x) repeat-x;
+	.box-shadow(inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2));
+	.backface-visibility(hidden);
+}
 section#content {
 	text-align: center;
 	color: @accentColor;
 	width: 100%;
 	position: relative;
 	padding-top: 10px;
-	padding-bottom: 20px;
-	background: @black;
-	border-top: 1px solid @grayDark;
-	border-bottom: 1px solid @grayDark;
+	padding-bottom: 0px;
+	background: transparent;
+	position: relative;
+	//background: @white url(@bgWood1x) repeat-x;
+	//border-top: 1px solid @grayDark;
+	//border-bottom: 1px solid @grayDark;
 	.backface-visibility(hidden);
 }
 
