--- a/assets/less/values.less
+++ b/assets/less/values.less
@@ -180,7 +180,7 @@
 @bgCanvas1x:	"../img/bg-texture@1x.jpg";
 @bgCanvas2x:	"../img/bg-texture@2x.jpg";
 @bgWood1x:	"../img/bg-wood@1x.jpg";
-@bgWood2x:	"../img/bg-texture@2x.jpg";
+@bgWood2x:	"../img/bg-wood@2x.jpg";
 
 // Input placeholder text color
 // -------------------------
