--- a/assets/less/queries.less
+++ b/assets/less/queries.less
@@ -22,9 +22,18 @@ section {
 section#letterhead {
 	margin: 0 0px 0 0px;
 }
+
+header {
+	min-height: 50px;
+}
+
 header, footer, #page {
 	margin: 0px -10px 0px -10px;
 	padding: 0px 10px 0px 10px;
+}
+
+header a.brand {
+	margin-top: 0px;
 }
 
 .btn-block-fluid {
@@ -286,7 +295,7 @@ section#pong p {
 	padding-right: 10px;
 }
 a.bucket {
-	background-color: @printerBlacker;
+	//background-color: @printerBlacker;
 	.transition(all .2s linear);
 }
 section#pong a.btn{
