--- a/assets/css/style-home.css
+++ b/assets/css/style-home.css
@@ -618,11 +618,17 @@ a.btn-cta {
   section#letterhead {
     margin: 0 0px 0 0px;
   }
+  header {
+    min-height: 50px;
+  }
   header,
   footer,
   #page {
     margin: 0px -10px 0px -10px;
     padding: 0px 10px 0px 10px;
+  }
+  header a.brand {
+    margin-top: 0px;
   }
   .btn-block-fluid {
     width: 100%;
@@ -870,7 +876,6 @@ a.btn-cta {
     padding-right: 10px;
   }
   a.bucket {
-    background-color: #252525;
     -webkit-transition: all 0.2s linear;
     -moz-transition: all 0.2s linear;
     -o-transition: all 0.2s linear;
