--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,7 @@ header a.brand {
   font-family: "brandon-grotesque", "Helvetica Neue", Helvetica, Arial, sans-serif;
   position: relative;
   display: inline-block;
+  margin-top: 20px;
   font-size: 22px;
   font-weight: 700;
   text-transform: uppercase;
@@ -216,20 +217,20 @@ header a.brand:focus {
   color: #74716f;
   text-shadow: 0 1px transparent;
 }
+/*
 header a.brand:before {
-  content: "";
-  position: relative;
-  display: inline-block;
-  background-image: url("../img/logo.png");
-  background-repeat: no-repeat;
-  height: 50px;
-  width: 50px;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  backface-visibility: hidden;
+	content: "";
+	position: relative;
+	display: inline-block;
+	background-image: url("../img/logo.png");
+	background-repeat: no-repeat;
+	height: 50px;
+	width: 50px;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	.backface-visibility(hidden);
+	
 }
+*/
 header p {
   color: #1b7ad6;
   font-family: "brandon-grotesque", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -251,7 +252,7 @@ nav {
 }
 nav ul {
   list-style: none;
-  margin-top: 35px;
+  margin-top: 20px;
 }
 nav ul li {
   display: inline-block;
@@ -366,7 +367,7 @@ a.plus {
   background-repeat: no-repeat;
   height: 22px;
   width: 22px;
-  top: 15px;
+  top: 10px;
   right: 5px;
   padding: 5px;
   background-position: center;
@@ -633,6 +634,24 @@ img.so-skype {
   -moz-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
   backface-visibility: hidden;
+}
+#content .greeting {
+  text-align: left;
+  margin-top: 25%;
+  display: block;
+}
+#content .greeting h2 {
+  text-align: left;
+  font-size: 36px;
+  line-height: 40px;
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+}
+#content .greeting p {
+  text-align: left;
+  font-size: 18px;
+  line-height: 22px;
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+  color: #ffffff;
 }
 section#content::before {
   content: "";
@@ -1379,11 +1398,17 @@ p.contactlead {
   section#letterhead {
     margin: 0 0px 0 0px;
   }
+  header {
+    min-height: 50px;
+  }
   header,
   footer,
   #page {
     margin: 0px -10px 0px -10px;
     padding: 0px 10px 0px 10px;
+  }
+  header a.brand {
+    margin-top: 0px;
   }
   .btn-block-fluid {
     width: 100%;
@@ -1631,7 +1656,6 @@ p.contactlead {
     padding-right: 10px;
   }
   a.bucket {
-    background-color: #252525;
     -webkit-transition: all 0.2s linear;
     -moz-transition: all 0.2s linear;
     -o-transition: all 0.2s linear;
