--- a/assets/less/keyframes.less
+++ b/assets/less/keyframes.less
@@ -53,100 +53,15 @@
 
 /* Home Page */
 
-#team-1 {
-	.animation-duration(1s);
+#cover {
+    .animation-duration(1s);
     .animation-delay(1s);
     .animation-iteration-count(none);
 }
-#team-2 {
-	.animation-duration(1s);
-    .animation-delay(1.1s);
-    .animation-iteration-count(none);
-}
-#team-3 {
-	.animation-duration(1s);
-    .animation-delay(1.2s);
-    .animation-iteration-count(none);
-}
-#team-4 {
-	.animation-duration(1s);
-    .animation-delay(1.3s);
-    .animation-iteration-count(none);
-}
-#team-5 {
-	.animation-duration(1s);
-    .animation-delay(1.4s);
-    .animation-iteration-count(none);
-}
-#team-6 {
-	.animation-duration(1s);
-    .animation-delay(1.5s);
-    .animation-iteration-count(none);
-}
-#team-7 {
-	.animation-duration(1s);
-    .animation-delay(1.6s);
-    .animation-iteration-count(none);
-}
-#team-8 {
-	.animation-duration(1s);
-    .animation-delay(1.7s);
-    .animation-iteration-count(none);
-}
-#team-9 {
-	.animation-duration(1s);
-    .animation-delay(1.8s);
-    .animation-iteration-count(none);
-}
-#team-10 {
-	.animation-duration(1s);
-    .animation-delay(1.9s);
-    .animation-iteration-count(none);
-}
-#team-11 {
-	.animation-duration(1s);
-    .animation-delay(2s);
-    .animation-iteration-count(none);
-}
-#team-12 {
-	.animation-duration(1s);
-    .animation-delay(2.1s);
-    .animation-iteration-count(none);
-}
 
-#team-13 {
-	.animation-duration(1s);
-    .animation-delay(2.2s);
-    .animation-iteration-count(none);
-}
-
-#team-14 {
-	.animation-duration(1s);
-    .animation-delay(2.3s);
-    .animation-iteration-count(none);
-}
-
-#team-15 {
-	.animation-duration(1s);
-    .animation-delay(2.4s);
-    .animation-iteration-count(none);
-}
-
-#team-16 {
-	.animation-duration(1s);
-    .animation-delay(2.5s);
-    .animation-iteration-count(none);
-}
-
-#team-17 {
-	.animation-duration(.5s);
-    .animation-delay(3s);
-    .animation-iteration-count(none);
-}
-
-#team-18 {
-	.animation-duration(.5s);
-    .animation-delay(3.2s);
+#bonjour {
+    .animation-duration(1s);
+    .animation-delay(1s);
     .animation-iteration-count(none);
 }
 
@@ -187,12 +102,6 @@
     .animation-iteration-count(none);
 }
 /* Contact Page */
-
-#cover {
-    .animation-duration(1s);
-    .animation-delay(1s);
-    .animation-iteration-count(none);
-}
 
 #contactbanner {
     .animation-duration(1s);
