--- a/assets/less/queries.less
+++ b/assets/less/queries.less
@@ -246,6 +246,12 @@ section#content {
 	margin: 0 -10px 0px -10px;
 	padding: 0 10px 0px 10px;
 }
+
+section#intro {
+	background-color: @slateLight;
+	margin: 0 -10px 0px -10px;
+	padding: 0 10px 0px 10px;
+}
 	
 ul.headshots {
 	padding: 10px 0 10px 0;
@@ -689,10 +695,10 @@ only screen and (-webkit-min-device-pixel-ratio : 1.5),
 only screen and (min-device-pixel-ratio : 1.5) {
 /* Styles */
 
-header a.brand {
-	background-image: url("../img/logo@2x.png");
-	background-size: 200px 57px;
-}
+//header a.brand {
+	//background-image: url("../img/logo@2x.png");
+	//background-size: 200px 57px;
+//}
 
 a.plus {
 	background-image: url("@{icons2xTrigger}");
